// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fabric renders a Fabric component correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders a Fabric component with applyTheme correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders as a span using the "as" prop 1`] = `
<span
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
/>
`;
